--- a/src/index.css
+++ b/src/index.css
@@ -22,4 +22,7 @@ body {
         rgba(247, 247, 247, 1) 23.8%,
         rgba(252, 221, 221, 1) 92%
     );
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
