--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,9 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+.title {
+    font-size: 3.2rem;
+    font-weight: 700;
+    text-transform: capitalize;
+}
