--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,54 @@ body {
     justify-content: center;
 }
 
+.container {
+    position: relative;
+}
+
 .title {
     font-size: 3.2rem;
     font-weight: 700;
     text-transform: capitalize;
+    text-align: center;
+    position: absolute;
+    top: -100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.music-player {
+    height: 5.2rem;
+    width: 35rem;
+    border-radius: 1.5rem;
+    background-color: #fff;
+    box-shadow: 0 2rem 2rem 0 rgb(252 169 169 / 60%);
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 4.8rem;
+    width: 45rem;
+}
+
+.music-player__controls {
+    display: flex;
+    justify-content: center;
+    gap: 3.2rem;
+}
+
+.music-player__btn {
+    display: inline-block;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.music-player__icon {
+    height: 3.2rem;
+    width: 3.2rem;
+    fill: #cdc2d0;
+}
+
+.music-player__controls .music-player__btn:nth-child(2) .music-player__icon {
+    height: 4.8rem;
+    width: 4.8rem;
 }
