--- a/src/index.css
+++ b/src/index.css
@@ -55,10 +55,31 @@ body {
     padding: 4.8rem;
     width: 55rem;
     height: 15rem;
+    position: relative;
+}
+
+.music-player__info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 85%;
+    margin-left: 7.5%;
+    background-color: #ffffff80;
+    border-radius: 1.5rem;
+    transform: translateY(0);
+    opacity: 0;
+    transition: all 0.5s ease-out;
+    z-index: -1;
+}
+
+.music-player__info.music-player__info--playing {
+    transform: translateY(-11.5rem);
+    opacity: 1;
 }
 
 .music-player__cover {
-    height: 20rem;
+    height: 18rem;
     position: relative;
 }
 
@@ -101,7 +122,7 @@ body {
 
 @keyframes rotation {
     0% {
-        transform: rotate(0deg);
+        transform: rotate(0);
     }
 
     100% {
