--- a/src/index.css
+++ b/src/index.css
@@ -71,11 +71,47 @@ body {
     opacity: 0;
     transition: all 0.5s ease-out;
     z-index: -1;
+
+    /* display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+    gap: 1.6rem; */
 }
 
 .music-player__info.music-player__info--playing {
     transform: translateY(-11.5rem);
     opacity: 1;
+}
+
+.music-player__info-container {
+    /* border: solid black; */
+    position: absolute;
+    top: 20%;
+    left: 45%;
+}
+
+.music-player__title {
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: #000;
+    margin-bottom: 2.4rem;
+}
+
+.music-player__progress {
+    background-color: red;
+    cursor: pointer;
+    height: 0.7rem;
+    width: 24rem;
+    border-radius: 0.9rem;
+    overflow: hidden;
+}
+
+.music-player__progress-indicator {
+    cursor: pointer;
+    background-color: yellow;
+    width: 0;
+    height: 100%;
 }
 
 .music-player__cover {
